[project]
name = "pythia"
version = "0.1.0"
description = "PYTHIA — Osiris x MiroFish x Kalshi autonomous prediction & wager engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=12.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "requests>=2.31",
]

[tool.uv]
package = false

[tool.pythia]
# placeholder for future tooling config
